==> icamgo/noduino-sdk/arch/avr/libs/SX126x/sx126x.cpp <==
#include "Arduino.h"
#include <SPI.h>
#include "SX126x.h"

void SX126x::Reset(void)
{
	delay(10);
	digitalWrite(SX126x_RESET, 0);
	delay(20);
	digitalWrite(SX126x_RESET, 1);
	delay(10);
	while (digitalRead(SX126x_BUSY)) ;
}

void SX126x::CalibrateImage(uint32_t frequency)
{
	uint8_t calFreq[2];

	if (frequency > 900000000) {
		calFreq[0] = 0xE1;
		calFreq[1] = 0xE9;
	} else if (frequency > 850000000) {
		calFreq[0] = 0xD7;
		calFreq[1] = 0xD8;
	} else if (frequency > 770000000) {
		calFreq[0] = 0xC1;
		calFreq[1] = 0xC5;
	} else if (frequency > 460000000) {
		calFreq[0] = 0x75;
		calFreq[1] = 0x81;
	} else if (frequency > 425000000) {
		calFreq[0] = 0x6B;
		calFreq[1] = 0x6F;
	}
	SPIwriteCommand(SX126X_CMD_CALIBRATE_IMAGE, calFreq, 2);
}

uint8_t SX126x::ReadBuffer(uint8_t * rxData, uint8_t * rxDataLen,
			   uint8_t maxLen)
{
	uint8_t offset = 0;

	GetRxBufferStatus(rxDataLen, &offset);
	if (*rxDataLen > maxLen) {
		return 1;
	}

	while (digitalRead(SX126x_BUSY)) ;

	digitalWrite(SX126x_SPI_SELECT, LOW);
	SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));
	SPI.transfer(SX126X_CMD_READ_BUFFER);
	SPI.transfer(offset);
	SPI.transfer(SX126X_CMD_NOP);
	for (uint16_t i = 0; i < *rxDataLen; i++) {
		rxData[i] = SPI.transfer(SX126X_CMD_NOP);
	}
	digitalWrite(SX126x_SPI_SELECT, HIGH);

	while (digitalRead(SX126x_BUSY)) ;

	return 0;
}

uint8_t SX126x::WriteBuffer(uint8_t * txData, uint8_t txDataLen)
{
	//Serial.print("SPI write: CMD=0x");
	//Serial.print(SX126X_CMD_WRITE_BUFFER, HEX);
	//Serial.print(" DataOut: ");
	digitalWrite(SX126x_SPI_SELECT, LOW);
	SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));
	SPI.transfer(SX126X_CMD_WRITE_BUFFER);
	SPI.transfer(0);	//offset in tx fifo
	//Serial.print(" 0 ");
	for (uint16_t i = 0; i < txDataLen; i++) {
		//Serial.print(txData[i]);
		//Serial.print(" ");
		SPI.transfer(txData[i]);
	}
	digitalWrite(SX126x_SPI_SELECT, HIGH);
	//Serial.println("");
	while (digitalRead(SX126x_BUSY)) ;

	return 0;
}

void SX126x::SPItransfer(uint8_t cmd, bool write, uint8_t * dataOut,
			 uint8_t * dataIn, uint8_t numBytes, bool waitForBusy)
{

	// ensure BUSY is low (state meachine ready)
	// TODO timeout
	while (digitalRead(SX126x_BUSY)) ;

	// start transfer
	digitalWrite(SX126x_SPI_SELECT, LOW);
	SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

	// send command byte
	SPI.transfer(cmd);

	// send/receive all bytes
	if (write) {
		//Serial.print("SPI write: CMD=0x");
		//Serial.print(cmd, HEX);
		//Serial.print(" DataOut: ");
		for (uint8_t n = 0; n < numBytes; n++) {
			uint8_t in = SPI.transfer(dataOut[n]);
			//Serial.print(dataOut[n], HEX);
			//Serial.print(" ");
		}
		//Serial.println();
	} else {
		//Serial.print("SPI read:  CMD=0x");
		//Serial.print(cmd, HEX);
		// skip the first byte for read-type commands (status-only)
		uint8_t in = SPI.transfer(SX126X_CMD_NOP);
		////Serial.println((SX126X_CMD_NOP, HEX));
		//Serial.print(" DataIn: ");

		for (uint8_t n = 0; n < numBytes; n++) {
			dataIn[n] = SPI.transfer(SX126X_CMD_NOP);
			////Serial.println((SX126X_CMD_NOP, HEX));
			//Serial.print(dataIn[n], HEX);
			//Serial.print(" ");
		}
		//Serial.println();
	}

	// stop transfer
	SPI.endTransaction();
	digitalWrite(SX126x_SPI_SELECT, HIGH);

	// wait for BUSY to go high and then low
	// TODO timeout
	if (waitForBusy) {
		delayMicroseconds(1);
		while (digitalRead(SX126x_BUSY)) ;
	}
}
