==> miszaklajent/esp-idf-sx126x-minimal/include/sx126x.c <==
#include <stdio.h>
#include <inttypes.h>
#include <string.h>
#include <math.h>
#include <stdlib.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include "sx126x.h"
#define TAG "sx126x"
#define HOST_ID SPI2_HOST
#define delay(ms) vTaskDelay(ms/portTICK_PERIOD_MS)//esp_rom_delay_us(ms*1000)

uint8_t spi_transfer(uint8_t address)
{
	uint8_t datain[1];
	uint8_t dataout[1];
	dataout[0] = address;
	//spi_write_byte(dataout, 1 );
	spi_read_byte(datain, dataout, 1 );
	return datain[0];
}

void Reset(void)
{
	delay(10);
	gpio_set_level(SX126x_RESET,0);
	delay(20);
	gpio_set_level(SX126x_RESET,1);
	delay(10);
	// ensure BUSY is low (state meachine ready)
	WaitForIdle(BUSY_WAIT, "Reset", true);
}

void CalibrateImage(uint32_t frequency)
{
	uint8_t calFreq[2];

	if( frequency> 900000000 )
	{
		calFreq[0] = 0xE1;
		calFreq[1] = 0xE9;
	}
	else if( frequency > 850000000 )
	{
		calFreq[0] = 0xD7;
		calFreq[1] = 0xDB;
	}
	else if( frequency > 770000000 )
	{
		calFreq[0] = 0xC1;
		calFreq[1] = 0xC5;
	}
	else if( frequency > 460000000 )
	{
		calFreq[0] = 0x75;
		calFreq[1] = 0x81;
	}
	else if( frequency > 425000000 )
	{
		calFreq[0] = 0x6B;
		calFreq[1] = 0x6F;
	}
	WriteCommand(SX126X_CMD_CALIBRATE_IMAGE, calFreq, 2); // 0x98
}

uint8_t ReadBuffer(uint8_t *rxData, int16_t rxDataLen)
{
	uint8_t offset = 0;
	uint8_t payloadLength = 0;
	GetRxBufferStatus(&payloadLength, &offset);
	if( payloadLength > rxDataLen )
	{
		ESP_LOGW(TAG, "ReadBuffer rxDataLen too small. payloadLength=%d rxDataLen=%d", payloadLength, rxDataLen);
		return 0;
	}

	// ensure BUSY is low (state meachine ready)
	WaitForIdle(BUSY_WAIT, "start ReadBuffer", true);

	// start transfer
	uint8_t *buf;
	buf = malloc(payloadLength+3);
	if (buf != NULL) {
		buf[0] = SX126X_CMD_READ_BUFFER; // 0x1E
		buf[1] = offset; // offset in rx fifo
		buf[2] = SX126X_CMD_NOP;
		memset(&buf[3], SX126X_CMD_NOP, payloadLength);
		spi_read_byte(buf, buf, payloadLength+3);
		memcpy(rxData, &buf[3], payloadLength);
		free(buf);
	} else {
		ESP_LOGE(TAG, "ReadBuffer malloc fail");
		payloadLength = 0;
	}

	// wait for BUSY to go low
	WaitForIdle(BUSY_WAIT, "end ReadBuffer", false);

	return payloadLength;
}

void WriteBuffer(uint8_t *txData, int16_t txDataLen)
{
	// ensure BUSY is low (state meachine ready)
	WaitForIdle(BUSY_WAIT, "start WriteBuffer", true);

	// start transfer
	uint8_t *buf;
	buf = malloc(txDataLen+2);
	if (buf != NULL) {
		buf[0] = SX126X_CMD_WRITE_BUFFER; // 0x0E
		buf[1] = 0; // offset in tx fifo
		memcpy(&buf[2], txData, txDataLen);
		spi_write_byte(buf, txDataLen+2);
		free(buf);
	} else {
		ESP_LOGE(TAG, "WriteBuffer malloc fail");
	}

	// wait for BUSY to go low
	WaitForIdle(BUSY_WAIT, "end WriteBuffer", false);
}
